--- a/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
+++ b/cotizador_acerta/templates/polizas/emision_acreedor_asegurado_pdf.html
@@ -149,10 +149,10 @@
     <td colspan="2" >CARGA:</td>
   </tr>
   <tr>
-    <td colspan="2">COLOR:</td>
+    <td colspan="2">COLOR: {{ extra_cliente.color }}</td>
     <td colspan="2">AÑO: {{ conductor.anio }}</td>
     <td colspan="2">USO: Particular</td>
-    <td colspan="2">PUESTOS:</td>
+    <td colspan="2">PUESTOS: {{ extra_cliente.num_puestos }}</td>
   </tr>
   <tr>
     <td colspan="2">SUMA ASEGURADA: {{ conductor.valor }}</td>
@@ -383,10 +383,10 @@
     <td colspan="2" >CARGA:</td>
   </tr>
   <tr>
-    <td colspan="2">COLOR:</td>
+    <td colspan="2">COLOR: {{ extra_cliente.color }}</td>
     <td colspan="2">AÑO: {{ conductor.anio }}</td>
     <td colspan="2">USO: Particular</td>
-    <td colspan="2">PUESTOS:</td>
+    <td colspan="2">PUESTOS: {{ extra_cliente.num_puestos }}</td>
   </tr>
   <tr>
     <td colspan="2">SUMA ASEGURADA: {{ conductor.valor }}</td>
