fix total cotizaciones

--- a/cotizador_acerta/templates/polizas/emision_todas_pdf.html
+++ b/cotizador_acerta/templates/polizas/emision_todas_pdf.html
@@ -253,7 +253,7 @@
     <td colspan="4">EMISIÓN PÓLIZA NUEVA<br>{{solicitud.nombre_conductor}}<br>{{solicitud.nombre_conductor2}}<br>{{solicitud.nombre_conductor3}}<br></td>
     <td colspan="2" style="margin-left: 10px;"><b>SUB-TOTAL:</b><br><b>DESCUENTO ADICIONAL:</b><br>OTROS CARGOS:<br><b>SUB-TOTAL A PAGAR:</b><br>IMPUESTO %: &nbsp;&nbsp;6.00<br><b>TOTAL A PAGAR:</b></td>
     <td colspan="1" style="text-align: right;">B/.<br>B/.<br>B/.<br>B/.<br>&nbsp; B/.<br>B/.</td>
-    <td colspan="1" style="text-align: right;">{{ subtotal|floatformat:2|intcomma }}<br>{{ descuento|floatformat:2|intcomma }}<br>.00<br>{{ solicitud.cotizacion.subtotal|floatformat:2|intcomma }}<br>{{ solicitud.cotizacion.impuestos }}<br>{{ solicitud.cotizacion.total }}</td>
+    <td colspan="1" style="text-align: right;">{{ solicitud.cotizacion.subtotal|floatformat:2|intcomma }}<br>{{ descuento|floatformat:2|intcomma }}<br>.00<br>{{ subtotal|floatformat:2|intcomma }}<br>{{ impuestos }}<br>{{ total }}</td>
   </tr>
 
 
@@ -488,7 +488,7 @@
     <td colspan="4">EMISIÓN PÓLIZA NUEVA<br>{{solicitud.nombre_conductor}}<br>{{solicitud.nombre_conductor2}}<br>{{solicitud.nombre_conductor3}}<br></td>
     <td colspan="2" style="margin-left: 10px;"><b>SUB-TOTAL:</b><br><b>DESCUENTO ADICIONAL:</b><br>OTROS CARGOS:<br><b>SUB-TOTAL A PAGAR:</b><br>IMPUESTO %: &nbsp;&nbsp;6.00<br>TOTAL A PAGAR:</b></td>
     <td colspan="1" style="text-align: right;">B/.<br>B/.<br>B/.<br>B/.<br>&nbsp; B/.<br>B/.</td>
-    <td colspan="1" style="text-align: right;">{{ subtotal|floatformat:2|intcomma }}<br>{{ descuento|floatformat:2|intcomma }}<br>.00<br>{{ solicitud.cotizacion.subtotal|floatformat:2|intcomma }}<br>{{ solicitud.cotizacion.impuestos }}<br>{{ solicitud.cotizacion.total }}</td>
+    <td colspan="1" style="text-align: right;">{{ solicitud.cotizacion.subtotal|floatformat:2|intcomma }}<br>{{ descuento|floatformat:2|intcomma }}<br>.00<br>{{ subtotal|floatformat:2|intcomma }}<br>{{ impuestos }}<br>{{ total }}</td>
   </tr>
 
 
@@ -722,7 +722,7 @@
     <td colspan="4">EMISIÓN PÓLIZA NUEVA<br>{{solicitud.nombre_conductor}}<br>{{solicitud.nombre_conductor2}}<br>{{solicitud.nombre_conductor3}}<br></td>
     <td colspan="2" style="margin-left: 10px;"><b>SUB-TOTAL:</b><br><b>DESCUENTO ADICIONAL:</b><br>OTROS CARGOS:<br><b>SUB-TOTAL A PAGAR:</b><br>IMPUESTO %: &nbsp;&nbsp;6.00<br>TOTAL A PAGAR:</b></td>
     <td colspan="1" style="text-align: right;">B/.<br>B/.<br>B/.<br>B/.<br>&nbsp; B/.<br>B/.</td>
-    <td colspan="1" style="text-align: right;">{{ subtotal|floatformat:2|intcomma }}<br>{{ descuento|floatformat:2|intcomma }}<br>.00<br>{{ solicitud.cotizacion.subtotal|floatformat:2|intcomma }}<br>{{ solicitud.cotizacion.impuestos }}<br>{{ solicitud.cotizacion.total }}</td>
+    <td colspan="1" style="text-align: right;">{{ solicitud.cotizacion.subtotal|floatformat:2|intcomma }}<br>{{ descuento|floatformat:2|intcomma }}<br>.00<br>{{ subtotal|floatformat:2|intcomma }}<br>{{ impuestos }}<br>{{ total }}</td>
   </tr>
 
 
