--- a/cotizador_acerta/templates/reportes/corredor_detail.html
+++ b/cotizador_acerta/templates/reportes/corredor_detail.html
@@ -70,7 +70,13 @@
 				      <td class="sorting_1"> {{ cotizacion.conductor.nombre }} {{ cotizacion.conductor.apellido }}</td>
 				      <td>{{ cotizacion.conductor.marca.nombre }}</td>
 				      <td>{{ cotizacion.conductor.modelo.nombre }}</td>
-				      <td> B/. {{ cotizacion.total }}</td>
+				      {% if cotizacion.tipo_pago != 'Contado' %}
+                      <td>B/.{{ cotizacion.prima_pagoContado|floatformat:2|intcomma }}</td>
+                      {% elif cotizacion.tipo_pago == 'Visa' or cotizacion.tipo_pago == 'ACH'%}
+                      <td>B/.{{ cotizacion.prima_pagoVisa|floatformat:2|intcomma }}</td>
+                      {% else %}
+                      <td>B/.{{ cotizacion.total|floatformat:2|intcomma }}</td>
+                      {% endif %}
 				      {% if cotizacion.status == 'Enviada' or cotizacion.status == 'Guardada' %}
 				      	<td><span class="badge bg-orange">{{ cotizacion.status }}</span></td>
 					  {% elif cotizacion.status == 'Aprobada' %}
