--- a/cotizador_acerta/templates/polizas/prueba_pdf.html
+++ b/cotizador_acerta/templates/polizas/prueba_pdf.html
@@ -6,22 +6,6 @@
   </style>
 
   <style type="text/css">
-    div{
-       border: 1px solid black ;
-      }
-
-      h3{
-       display: inline;   
-      }
-      td {
-        vertical-align: middle;
-      }
-
-      .inner {
-         border: 1px solid #000000;
-         padding:0px;margin:0px;
-         display: inline;
-        }
 
   </style>
 
@@ -34,7 +18,7 @@
     <td></td>
     <td style="border: none;" colspan="3" align="center">
     <br>
-      <table bordercolor="#FF6900" border="1" cellpadding="1" cellspacing="1">
+      <table bordercolor="#EB6948" border="1" cellpadding="1" cellspacing="1">
        <tr>
          <td style="padding: 2px; width:50px; height: 300px;vertical-align: text-bottom;"><span style="font-size:15px;">{{fecha.day}}</span><br><span style="font-size:11px;">día</span></td>
          <td style="padding: 2px; width:50px; height: 300px;vertical-align: text-bottom;"><span style="font-size:15px;">{{fecha.month}}</span><br><span style="font-size:11px;">mes</span></td>
@@ -44,8 +28,8 @@
      <br>Fecha de Emisión
     </td>
     <td style="border: none;" colspan="4" align="center">
-     <h2 style="color: #FF6900;">Autorización de Débitos Informáticos ACH</h2>
-     <table bordercolor="#FF6900" style="font-size:16px;" border="1" cellpadding="1" cellspacing="1">
+     <h2 style="color: #EB6948;">Autorización de Débitos Informáticos ACH</h2>
+     <table bordercolor="#EB6948" style="font-size:16px;" border="1" cellpadding="1" cellspacing="1">
        <tr style="vertical-align: middle">
          <td style=" padding: 8px 0em 1px 0em;">0</td>
          <td style=" padding: 8px 0em 1px 0em;">0</td>
@@ -77,7 +61,7 @@
       <td style="text-align: right; border: none;">
       <br><br><br>
        <b>Ruta y Tránsito:</b>&nbsp;&nbsp;&nbsp;&nbsp;</td>
-       <td><table bordercolor="#FF6900" style="font-size:16px;" border="1" cellpadding="1" cellspacing="1">
+       <td><table bordercolor="#EB6948" style="font-size:16px;" border="1" cellpadding="1" cellspacing="1">
        <tr>
          <td style=" padding: 5px 0em 1px 0em;">&nbsp;</td>
          <td style=" padding: 5px 0em 1px 0em;">&nbsp;</td>
