--- a/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
+++ b/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
@@ -538,5 +538,12 @@ jQuery(document).ready(function($) {
     });
 
 </script>
+<script type="text/javascript">
+    document.getElementsByTagName("BODY")[0].setAttribute("onload", "noBack();");
+    document.getElementsByTagName("BODY")[0].setAttribute("onpageshow", "if (event.persisted) noBack();");
+    document.getElementsByTagName("BODY")[0].setAttribute("onunload", "");
+    window.history.forward();
+    function noBack() { window.history.forward(); }
+</script>
 
 {% endblock custom_script %}
