fix descuadre paso 3

--- a/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
+++ b/cotizador_acerta/templates/cotizar/detalle_cotizacion.html
@@ -265,24 +265,20 @@
                     </div>
                     <div class="row hidden-md hidden-lg"></div>
                     <div class="col-xs-1 hidden-md hidden-lg"></div>
-                    <div class="col-md-3 col-xs-6 text-right" style="text-align:left;">
+                    <div class="col-md-2 col-xs-6 text-right" style="text-align:left;">
                       <h5><strong>Endoso:</strong></h5>
                       <h5 style="padding-top: 9.5%;">Subtotal:</h5>
                       <h5>Impuestos:</h5>
                       <h5>Total:</h5>
-                      <h5 class="prima-contado hidden" ><strong>Total a pagar de Contado:</strong></h5>
-                      <h5 class="prima-ach hidden"><strong>Total a pagar con ACH:</strong></h5>
-                      <h5 class="prima-visa hidden"><strong>Total a pagar con TCR:</strong></h5>
-                      <h5 class="prima-otro hidden"><strong>Total a pagar Otro:</strong></h5>
+                      <h5 class="prima-contado hidden" ><strong>Total a pagar:</strong></h5>
+                      <h5 class="prima-ach hidden"><strong>Total a pagar:</strong></h5>
+                      <h5 class="prima-visa hidden"><strong>Total a pagar:</strong></h5>
+                      <h5 class="prima-otro hidden"><strong>Total a pagar:</strong></h5>
                       <h5 class="prima-mensual hidden"><strong>Prima Mensual:</strong></h5>
                     </div>
-                    <div class="col-md-2 col-xs-4 text-right" style="text:align:left;">
+                    <div class="col-md-3 col-xs-4 text-right" style="text:align:left;">
                       <h5><strong>{{ cotizacion.endoso }}</strong></h5>
-                      {% if cotizacion.endoso.endoso|length < 15 %}
-                        <h5 style="padding-top: 12.5%;">B/. {{ cotizacion.subtotal|floatformat:2|intcomma }}</h5>
-                      {% else %}
-                        <h5>B/. {{ cotizacion.subtotal|floatformat:2|intcomma }}</h5>
-                      {% endif %}
+                      <h5 style="padding-top: 6%;">B/. {{ cotizacion.subtotal|floatformat:2|intcomma }}</h5>
                       <h5>B/. {{ cotizacion.impuestos|floatformat:2|intcomma }}</h5>
                       <h5><strong>B/.{{ cotizacion.total|floatformat:2|intcomma }}</strong></h5>
                       <h5 class="prima-contado hidden"><strong>B/. {{ cotizacion.prima_pagoContado|floatformat:2|intcomma }}</strong></h5>
