--- a/cotizador_acerta/templates/cotizar/vehiculo.html
+++ b/cotizador_acerta/templates/cotizar/vehiculo.html
@@ -355,7 +355,6 @@
 
     $(".extra").addClass("hidden"); 
 
-    $(document).ready(function(){
 
     $(".extra").addClass("hidden"); 
 
@@ -386,6 +385,7 @@
         }
     });
 
+    $(document).ready(function(){
         $("#id_campo_id_1").attr('maxlength','3');
         $(".ced").addClass("hidden");
         $(".passp").addClass("hidden");
@@ -456,6 +456,18 @@
                 $("#id_tipo").val(result[1]);
                 $('#id_campo_id_1').val(result[2]);
                 $('#id_campo_id_2').val(result[3]);
+                if ($('#id_provincia').val()=="E"){
+                    $("#id_campo_id_1").attr('maxlength','1');
+                    $("#id_campo_id_2").attr('maxlength','6');
+                    $(".ced-hid").addClass("hidden");
+                    $(".extra").removeClass("hidden"); 
+                }
+                else{
+                    $("#id_campo_id_1").attr('maxlength','3');
+                    $("#id_campo_id_2").attr('maxlength','4');
+                    $(".ced-hid").removeClass("hidden");
+                    $(".extra").addClass("hidden"); 
+                }
             {% elif vehiculo.tipo_id == 'Pasaporte' %}
                 $('#id_tipo_id_1').iCheck('check');
                 $(".passp").removeClass("hidden");
